@@ -1,11 +1,9 @@
 package com.app.octo.service.impl;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
+import lombok.RequiredArgsConstructor;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
@@ -13,33 +11,28 @@ import org.springframework.stereotype.Service;
 import com.app.octo.model.Category;
 import com.app.octo.model.enums.ErrorCodes;
 import com.app.octo.model.exception.AppException;
-import com.app.octo.model.request.CategoryRequest;
 import com.app.octo.model.request.CategoryUpdateRequest;
 import com.app.octo.model.response.ApiResponse;
-import com.app.octo.model.response.BookingResponse;
 import com.app.octo.model.response.CategoryGetResponse;
 import com.app.octo.model.response.CategoryResponse;
 import com.app.octo.repository.CategoryRepository;
 import com.app.octo.service.CategoryService;
 import org.dozer.Mapper;
 
-import jakarta.persistence.Access;
-
 @Service
+@RequiredArgsConstructor
 public class CategoryServiceImpl implements CategoryService{
-    
-    @Autowired
-    private CategoryRepository categoryRepository;
 
-    @Autowired
-    private Mapper mapper;
+    private final CategoryRepository categoryRepository;
+
+    private final Mapper mapper;
 
     public ApiResponse<List<CategoryGetResponse>> getAllCategories(){
         List<Category> categories = categoryRepository.findAll();
         List<CategoryGetResponse> categoryResponses = categories.stream()
             .map(category -> mapper.map(category, CategoryGetResponse.class))
-            .collect(Collectors.toList());
-            ApiResponse<List<CategoryGetResponse>> apiResponse = new ApiResponse<List<CategoryGetResponse>>();
+            .toList();
+            ApiResponse<List<CategoryGetResponse>> apiResponse = new ApiResponse<>();
             apiResponse.setData(categoryResponses);
         return apiResponse;
     }
